2010-08-17  Rik <octave@nomad.inbox5.com>

	* mappers.cc (gamma,lgamma): Add %!tests for negative integer
	input arguments.

2010-08-17  Rik <octave@nomad.inbox5.com>

	* bitfcns.cc (bitmax): Add additional calling argument, class, and 
	additional return value for bitmax("single").

2010-08-17  Rik <octave@nomad.inbox5.com>

	* bitfcns.cc (sizemax): Improve documentation string.

2010-08-16  Ben Abbott <bpabbott@mac.com>

	* gl2ps.c: Use upstream version gl2ps-1.3.5-svn-20100816.

2010-08-13  Rik <octave@nomad.inbox5.com>

	* toplev.c (do_goto_frame_relative): Remove unused variable c.

2010-08-13  Jaroslav Hajek  <highegg@gmail.com>

	* ov-builtin.cc 
	(octave_builtin::subsref (..., const std::list<octave_lvalue> *)
	octave_builtin::do_multi_index_op (..., const std::list<octave_lvalue> *)): 
	New methods. Move code here. Set curr_lvalue_list.
	(octave_builtin::curr_lvalue_list): New static member.
	* ov-fcn-handle.h: Declare them.
	* defun.cc (defun_isargout): New overloaded function.
	* defun-int.h: Declare it.

2010-08-11  Jaroslav Hajek  <highegg@gmail.com>

	* ov-lazy-idx.h (octave_lazy_index::subsasgn): Remove override. Leave
	it to the defualt numeric conversion mechanism.

2010-08-10  Jaroslav Hajek  <highegg@gmail.com>

	* data.cc (Fdiff): Allow logical type.

2010-08-09  Rik <octave@nomad.inbox5.com>

	* oct-parse.yy (parse_fcn_file): Restore parsing of help text
	accidentally lost in previous changeset.

2010-08-09  John W. Eaton  <jwe@octave.org>

	* oct-parse.yy (parse_fcn_file): Handle empty script files
	(bug #30588).

2010-08-09  Jaroslav Hajek  <highegg@gmail.com>

	* ov.cc (octave_value::assign (assign_op, const std::string&,
	const std::list<octave_value_list>&, const octave_value&):
	Don't attempt to fix struct assignment to non-struct values here.
	Check for successful assignment before overwriting this.

	* ov-cell.cc (octave_cell::subsasgn): Allow dot assignment into empty
	cell.

2010-08-08  Rik <octave@nomad.inbox5.com>
